Fixed overlapping class issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,7 @@
 
 }
 
-.list-group-item {
+.list-group {
 	color: #F2F2F2;
 }
 
